Closed Bug 1734656 Opened 4 years ago Closed 4 years ago

Accidental Incorrect Comment Committed

Categories

(Core :: DOM: Streams, defect, P5)

defect

Tracking

()

RESOLVED FIXED
99 Branch
Tracking Status
firefox99 --- fixed

People

(Reporter: mgaudet, Assigned: mgaudet)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

dom/streams/ReadableStreamDefaultController.h says

// Internal Slots: Public for ease of prototyping because
// of the reams of static methods that access internal slots.

This comment isn't true anymore, and should be deleted.

The severity field is not set for this bug.
:mgaudet, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(mgaudet)
Severity: N/A → S4
Flags: needinfo?(mgaudet)
No longer blocks: dom-streams
Blocks: 1755390
Assignee: nobody → mgaudet
Status: NEW → ASSIGNED
Pushed by mgaudet@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0d0cc08f77dd Remove incorrect comment r=saschanaz DONTBUILD
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: