Bug 1734656 - Remove incorrect comment r=saschanaz DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D138955